--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 click==8.1.8
+DAWG-Python==0.7.2
 joblib==1.4.2
 nltk==3.9.1
+pymorphy3==2.0.2
+pymorphy3-dicts-ru==2.4.417150.4580142
 regex==2024.11.6
+setuptools==75.8.0
 tqdm==4.67.1
